refactor(model-ad): extract search match branches into helpers with a MatchField enum